--- a/othello/src/App.css
+++ b/othello/src/App.css
@@ -5,7 +5,7 @@ td {
     border: solid 1px;  /* 枠線指定 */
     border-color:black;
     background-color: green;
-    padding: 0px;      /* 余白指定 */
+    /* padding:5px 5px;      */
     width: 70px;
     height: 70px;
 }
@@ -15,8 +15,9 @@ table {
 }
 .btn{
     display:block;
-    width:70px;
-    height:70px;
+    width:60px;
+    height:60px;
+    margin:0 auto;
     border-radius:100%;
     border: 0;
 }
